force-app/main/default/objects/Review_Time__c/Review_Time__c.object-meta.xml
<CustomObject>
    <label>Review Meeting</label>
    <nameField>
        <displayFormat>RM-{00000}</displayFormat>
        <label>Review Meeting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Review Meetings</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>