force-app/main/default/objects/Review_Time__c/fields/I_RS_Application_Review_Outcome__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Application_Review_Outcome__c</fullName>
    <description>The Application Review Outcome of the Ethics Request or Ethics Post Approval when it created this Review Time record.</description>
    <label>Application Review Outcome</label>
    <length>80</length>
    <type>Text</type>
</CustomField>