force-app/main/default/objects/Review_Time__c/fields/I_RS_Committee__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Committee__c</fullName>
    <label>Committee</label>
    <length>80</length>
    <type>Text</type>
</CustomField>