force-app/main/default/objects/Review_Time__c/fields/I_RS_Date_Outcome_Received__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Date_Outcome_Received__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date Outcome Received</label>
    <type>Date</type>
</CustomField>