force-app/main/default/objects/Review_Time__c/fields/I_RS_Day__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Day__c</fullName>
    <description>Day of week of Meeting Date.</description>
    <formula>CASE(WEEKDAY(I_RS_Meeting_Date__c),
1, &quot;Sunday&quot;,
2, &quot;Monday&quot;,
3, &quot;Tuesday&quot;,
4, &quot;Wednesday&quot;,
5, &quot;Thursday&quot;,
6, &quot;Friday&quot;,
7, &quot;Saturday&quot;,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day</label>
    <type>Text</type>
</CustomField>