force-app/main/default/objects/Review_Time__c/fields/I_RS_Ethics_Post_Approval__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Ethics_Post_Approval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ethics Post Approval</label>
    <referenceTo>Ethics_Post_Approval__c</referenceTo>
    <relationshipLabel>Review Meetings</relationshipLabel>
    <relationshipName>Review_Times</relationshipName>
    <type>Lookup</type>
</CustomField>