force-app/main/default/objects/Review_Time__c/fields/I_RS_Meeting_Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Meeting_Closing_Date__c</fullName>
    <description>&apos;Meeting Closing Date&apos; on related Meeting Date record on Ethics Request or Ethics Post Approval.</description>
    <label>Meeting Closing Date</label>
    <type>Date</type>
</CustomField>