force-app/main/default/objects/Review_Time__c/fields/I_RS_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Meeting_Date__c</fullName>
    <description>The &apos;Meeting Date&apos; on the Meeting Date record on the related Ethics Request or Ethics Post Approval record</description>
    <label>Meeting Date</label>
    <type>Date</type>
</CustomField>