force-app/main/default/objects/Review_Time__c/fields/I_RS_Meeting_Date_Record__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Meeting_Date_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The lookup reference to the Meeting Date record that was used to populate this record&apos;s fields.</description>
    <label>Meeting Date Record</label>
    <referenceTo>Meeting_Date__c</referenceTo>
    <relationshipLabel>Review Meetings</relationshipLabel>
    <relationshipName>Review_Times</relationshipName>
    <type>Lookup</type>
</CustomField>