force-app/main/default/objects/Review_Time__c/fields/I_RS_Meeting_Type__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Meeting_Type__c</fullName>
    <label>Meeting Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>