force-app/main/default/objects/Review_Time__c/fields/I_RS_Time_To_Approval__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Time_To_Approval__c</fullName>
    <formula>I_RS_Date_Outcome_Received__c - I_RS_Meeting_Closing_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time To Decision</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>