force-app/main/default/objects/Review_Time__c/recordTypes/I_RS_Ethics_Post_Approval.recordType-meta.xml
<RecordType>
    <fullName>I_RS_Ethics_Post_Approval</fullName>
    <active>true</active>
    <label>Ethics Post Approval</label>
</RecordType>