force-app/main/default/objects/Review_Time__c/recordTypes/I_RS_Ethics_Request.recordType-meta.xml
<RecordType>
    <fullName>I_RS_Ethics_Request</fullName>
    <active>true</active>
    <label>Ethics Request</label>
</RecordType>